--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/luna-blue/theme.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "node_modules/primeicons/primeicons.css",
+              {
+                "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
+              }
             ],
             "scripts": []
           },
