--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "primeicons": "^1.0.0-beta.10",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
