--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "^6.1.10",
     "@angular/cdk": "^7.0.2",
-    "@angular/common": "^6.1.0",
+    "@angular/common": "^6.1.9",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@types/jquery": "^3.3.22",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@types/jquery": "^3.3.22",
     "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-cookie-service": "^1.0.10",
+    "ngx-youtube-player": "^6.0.0",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
